--- a/index.html
+++ b/index.html
@@ -1,101 +1,179 @@
-<!--
-=====================================================
- BANNER WIZARD TOOL
- Author: Shabarish Shetty
- License: © 2025 Shabarish Shetty. All rights reserved.
- Website: https://bannerwizard.vercel.app/
- Description: Interactive HTML banner creation tool with live preview and GSAP animations.
- Developer: Shabarish Shetty (shabarish.shetty@indegene.com)
- UI Designer: Anusha RK (anusha.rk@indegene.com)
-=====================================================
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Banner Wizard Tool</title>
-  <link href="./css/style.css" rel="stylesheet" />
+  <title>BannerCraft by Indegene</title>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
+  <link href="./css/modern-style.css" rel="stylesheet" />
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link href="./lib/css/prism-tomorrow.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 <body>
 
-<div id="leftPanel">
-  <button id="toggleLeftPanel"><i class="fa-solid fa-xmark"></i></button>
-  <div class="panel-header">
-    <h2 class="banner-wizards">BANNER WIZARD</h2>
-  </div>
-  <div class="globalSettings" style="margin-bottom:2rem">
-    <button id="downloadJsonBtn"><i class="fa-solid fa-angles-down"></i> Download JSON</button>
-    <label>Import JSON file</label>
-    <input type="file" id="importJsonInput" accept=".json" />
+<div id="app-container">
 
-    <!-- Banner size controls -->
-    <div style="margin-top:5px;margin-bottom:16px;color:#fff;">
-      <label><strong style="color: #239BA7; padding-top: 5px; padding-bottom: 5px;">Banner Size:</strong></label>
-      Width: <input type="number" id="bannerWidthInput" value="300" style="width:60px;" /> <br>
-      Height: <input type="number" id="bannerHeightInput" value="250" style="width:60px;" />
-    </div>
-    <div style="margin-top: 12px;">
-      <label>
-        <input type="checkbox" id="snapToGridToggle" class="checkBoxDesign" checked> 
-        <i class="fa-solid fa-magnet" style="transform: rotate(180deg)"></i> Snap to 10px Grid
-      </label>
-    </div>
-    <div style="margin-top: 12px;">
-      <label>
-        <input type="checkbox" id="enableIsiCheckbox" class="checkBoxDesign" /> 
-        <i class="fa-solid fa-capsules"></i> Enable ISI
-      </label>
-    </div>
-</div>
+    <div id="leftPanel">
+        <div class="panel-header">
+            <div class="header-row">
+                <div class="logo-area">
+                    <img src="Indegene_logo.png" alt="Indegene Logo" class="logo-img" />
+                    <h1>BannerCraft</h1>
+                </div>
+            </div>
+            <div class="header-row">
+                <div class="panel-header-controls">
+                    <button id="undo-btn" class="icon-btn" title="Undo (Ctrl+Z)" disabled><i class="fas fa-undo"></i></button>
+                    <button id="redo-btn" class="icon-btn" title="Redo (Ctrl+Y)" disabled><i class="fas fa-redo"></i></button>
+                    <button id="theme-toggle-btn" class="icon-btn" title="Toggle Theme"><i class="fa-solid fa-moon"></i></button>
+                </div>
+            </div>
+        </div>
 
-  <h3 style="margin-bottom: 5px;color: #fff; text-transform: uppercase;">Generated Code</h3>
-  <button id="copyCodeBtn"><i class="fa-solid fa-copy"></i> Copy Code</button>
-  <pre><code id="outputCode" class="language-html"></code></pre>
-</div>
+      <div class="panel-content">
+          <div class="globalSettings">
+            <h3>Global Settings</h3>
+            <button id="downloadJsonBtn"><i class="fa-solid fa-download"></i> Download JSON</button>
+            <label for="importJsonInput">Import JSON file</label>
+            <input type="file" id="importJsonInput" accept=".json" />
 
-<div id="rightPanel">
-  <div class="preview-fixed">
-    <h3>
-      Live Preview 
-      <span style="font-size: 14px; color: #666;" id="durationDisplay">(0s)</span>
-    </h3>
-    <div id="previewArea"></div>
-    <button onclick="reanimate()">
-      <i class="fa-solid fa-repeat"></i> Reanimate
+            <div class="banner-size-controls">
+              <label>Banner Size:</label>
+              <div class="input-group">
+                <span>W:</span><input type="number" id="bannerWidthInput" value="300" />
+                <span>H:</span><input type="number" id="bannerHeightInput" value="250" />
+              </div>
+            </div>
+            
+            <label class="checkbox-control">
+                <input type="checkbox" id="snapToGridToggle" checked> 
+                <i class="fa-solid fa-magnet"></i> Snap to 10px Grid
+            </label>
+            <label class="checkbox-control">
+                <input type="checkbox" id="enableIsiCheckbox" /> 
+                <i class="fa-solid fa-capsules"></i> Enable ISI
+            </label>
+            <button id="editIsiBtn" style="display: none;"><i class="fa-solid fa-pen-to-square"></i> Edit ISI</button>
+            <div id="isi-custom-controls" style="display: none; margin-top: 10px; padding-top: 10px; border-top: 1px solid var(--border-primary);">
+              <label>Custom ISI Position:</label>
+              <div class="input-group">
+                  <span>W:</span><input type="number" id="isiWidthInput" placeholder="auto" />
+                  <span>H:</span><input type="number" id="isiHeightInput" placeholder="auto" />
+              </div>
+              <div class="input-group">
+                  <span>T:</span><input type="number" id="isiTopInput" placeholder="auto" />
+                  <span>L:</span><input type="number" id="isiLeftInput" placeholder="auto" />
+              </div>
+            </div>
+            <div class="image-overlay-controls">
+                <label for="overlayImageInput">Trace Image Overlay</label>
+                <input type="file" id="overlayImageInput" accept="image/*">
+                <label>Opacity: <input type="range" id="overlayOpacitySlider" min="0" max="1" step="0.1" value="0.5"></label>
+                <button id="removeOverlayBtn" type="button" style="background-color: #ef4444; margin-top: 8px;">
+                  <i class="fa-solid fa-trash"></i> Remove Overlay
+                </button>
+            </div>
+        </div>
+
+        <div class="layers-panel">
+            <h3>Layers</h3>
+            <div id="layers-container" class="empty">
+                <p>Add an image or text to begin.</p>
+            </div>
+        </div>
+
+        <div class="code-output-area">
+          <h3>Generated Code</h3>
+          <button id="copyCodeBtn"><i class="fa-solid fa-copy"></i> Copy Code</button>
+          <pre><code id="outputCode" class="language-html"></code></pre>
+        </div>
+      </div>
+    </div>
+    
+    <button id="toggleLeftPanel" class="panel-toggle-btn" title="Collapse Panel">
+        <i class="fa-solid fa-chevron-left"></i>
     </button>
-  </div>
 
-  <div class="create-banner">
-   
+    <div id="rightPanel">
+      <div class="preview-fixed">
+        <div class="preview-header">
+            <h3>Live Preview</h3>
+            <span id="durationDisplay">(0s)</span>
+        </div>
+        <div id="previewArea"></div>
+        <div class="preview-controls">
+            <button onclick="reanimate()">
+              <i class="fa-solid fa-repeat"></i> Reanimate
+            </button>
+        </div>
+        <div id="alignment-toolbar" class="alignment-toolbar" style="display: none;">
+            <div class="toolbar-group">
+                <label class="toggle-switch" title="Align to canvas instead of selection">
+                    <input type="checkbox" id="align-to-canvas-toggle">
+                    <span class="slider"></span>
+                    <i class="fas fa-expand"></i>
+                </label>
+            </div>
+            <div class="toolbar-group">
+                <button data-align="left" title="Align Left"><i class="fas fa-align-left"></i></button>
+                <button data-align="h-center" title="Align Horizontal Center"><i class="fas fa-align-center"></i></button>
+                <button data-align="right" title="Align Right"><i class="fas fa-align-right"></i></button>
+            </div>
+            <div class="toolbar-group">
+                <button data-align="top" title="Align Top"><i class="fas fa-align-left fa-rotate-90"></i></button>
+                <button data-align="v-center" title="Align Vertical Center"><i class="fas fa-align-center fa-rotate-90"></i></button>
+                <button data-align="bottom" title="Align Bottom"><i class="fas fa-align-right fa-rotate-90"></i></button>
+            </div>
+            <div class="toolbar-group">
+                <button data-distribute="horizontal" title="Distribute Horizontally"><i class="fas fa-arrows-left-right-to-line"></i></button>
+                <button data-distribute="vertical" title="Distribute Vertically"><i class="fas fa-grip-lines-vertical"></i></button>
+            </div>
+        </div>
+      </div>
 
-    <!-- Banner size controls -->
-    <div style="margin-top:16px;margin-bottom:16px;">
-      <label><strong style="color: #000; padding-top: 15px; padding-bottom: 5px;">Banner Image Assets:</strong></label><br>
- 
+      <div class="asset-controls">
+        <h3>Banner Assets</h3>
+        <div id="controls"></div>
+        <div class="add-buttons">
+            <button id="addImageBtn"><i class="fa-solid fa-image"></i> Add Image</button>
+            <button id="addTextBtn"><i class="fa-solid fa-font"></i> Add Text</button>
+        </div>
+      </div>
     </div>
-   
-   
-    <div id="controls"></div>
-    <button id="addImageBtn">Add Image</button>
-  </div>
+
 </div>
 
+<div id="context-menu" class="context-menu" style="display: none;">
+    <ul>
+      <li data-action="duplicate"><i class="fas fa-copy"></i><span>Duplicate</span></li>
+      <li data-action="delete"><i class="fas fa-trash-alt"></i><span>Delete</span></li>
+      <li class="separator"></li>
+      <li data-action="bring-to-front"><i class="fas fa-arrow-up"></i><span>Bring to Front</span></li>
+      <li data-action="send-to-back"><i class="fas fa-arrow-down"></i><span>Send to Back</span></li>
+    </ul>
+</div>
 
-  <!-- External Libraries -->
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   <script src="./lib/js/prism.min.js"></script>
   <script src="./lib/js/gsap.min.js"></script>
-
-  <!-- App Modules -->
   <script src="./js/utils.js"></script>
+  <script src="./js/history.js"></script>
+  <script src="./js/layers.js"></script>
   <script src="./js/uiControls.js"></script>
+  <script src="./js/textControls.js"></script>
   <script src="./js/preview.js"></script>
   <script src="./js/dragDrop.js"></script>
+  <script src="./js/alignment.js"></script>
+  <script src="./js/contextMenu.js"></script>
+  <script src="./js/overlay.js"></script>
   <script src="./js/bannerSize.js"></script>
   <script src="./js/animations.js"></script>
   <script src="./js/isi.js"></script>
+  <script src="./js/isiEditor.js"></script>
   <script src="./js/jsonImportExport.js"></script>
   <script src="./js/main.js"></script>
 </body>
